--- a/package.json
+++ b/package.json
@@ -8,15 +8,31 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.0.0",
+    "@react-native-community/masked-view": "0.1.5",
     "expo": "~36.0.0",
+    "expo-font": "~8.0.0",
     "react": "~16.9.0",
-    "react-dom": "~16.9.0",
+    "react-dom": "^16.13.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-gesture-handler": "~1.5.0",
+    "react-native-paper": "^3.6.0",
+    "react-native-reanimated": "~1.4.0",
+    "react-native-safe-area-context": "0.6.0",
+    "react-native-screens": "2.0.0-alpha.12",
+    "react-native-web": "^0.12.2",
+    "react-navigation": "^4.2.2",
+    "react-navigation-drawer": "^2.4.2",
+    "react-navigation-header-buttons": "^3.0.5",
+    "react-navigation-material-bottom-tabs": "^2.2.2",
+    "react-navigation-stack": "^2.2.2",
+    "react-navigation-tabs": "^2.8.2",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
-    "babel-preset-expo": "~8.0.0",
-    "@babel/core": "^7.0.0"
+    "@babel/core": "^7.0.0",
+    "babel-preset-expo": "~8.0.0"
   },
   "private": true
 }
